force-app/main/default/objects/Quote_Document_Content__mdt/Quote_Document_Content__mdt.object-meta.xml
<CustomObject>
    <description>Long-form, versioned source text for narrative blocks. Deliberately NOT Quote_Document_Key_Value__mdt: clause text needs a version field and far more than 255 characters, and versioning is not decoration - a signed document must be able to prove which wording the customer agreed to after the source has moved on.</description>
    <label>Quote Document Content</label>
    <pluralLabel>Quote Document Content</pluralLabel>
</CustomObject>