force-app/main/default/objects/Quote_Document_Content__mdt/fields/Block_Code__c.field-meta.xml
<CustomField>
    <fullName>Block_Code__c</fullName>
    <inlineHelpText>Semantic key this content supplies, e.g. TERMS_STANDARD. Matched with Locale to pick one record.</inlineHelpText>
    <label>Block Code</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>