force-app/main/default/objects/Quote_Document_Content__mdt/fields/Block_Type__c.field-meta.xml
<CustomField>
    <fullName>Block_Type__c</fullName>
    <inlineHelpText>Heading, Paragraph, Clause or Notice - how a renderer styles this content.</inlineHelpText>
    <label>Block Type</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>