force-app/main/default/objects/Quote_Document_Content__mdt/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <inlineHelpText>The wording. Plain text only, checked by the same markup rules as the generated block.</inlineHelpText>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>