force-app/main/default/objects/Quote_Document_Content__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <inlineHelpText>Where this block sits in the document-wide sequence shared with the tables.</inlineHelpText>
    <label>Display Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>