force-app/main/default/objects/Quote_Document_Content__mdt/fields/Heading__c.field-meta.xml
<CustomField>
    <fullName>Heading__c</fullName>
    <inlineHelpText>Optional heading printed above the body.</inlineHelpText>
    <label>Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>