force-app/main/default/objects/Quote_Document_Content__mdt/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <inlineHelpText>The locale this wording is written in, e.g. en_US. One record per block code per locale.</inlineHelpText>
    <label>Locale</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>