force-app/main/default/objects/Quote_Document_Content__mdt/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <inlineHelpText>Bump whenever the wording changes. Snapshotted onto every generated block as Source Version, and hashed into the fingerprint, so changing a clause regenerates rather than silently leaving old documents claiming the new text. Deploying this record does NOT by itself mark quotes stale - run the step 05 invalidation job.</inlineHelpText>
    <label>Version</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>